History is not cleared anymore on document save

--- a/doc/developer/developer_guide_preamble.tex
+++ b/doc/developer/developer_guide_preamble.tex
@@ -1,13 +1,13 @@
 \emph{Revision history}
 
 \begin{longtable}[c]{@{}lll@{}}
-\hline\noalign{\medskip}
+\toprule\addlinespace
 Author & Date & Comment
-\\\noalign{\medskip}
-\hline\noalign{\medskip}
+\\\addlinespace
+\midrule\endhead
 Gilles Grousset & 07/21/2013 & Initial version (draft)
-\\\noalign{\medskip}
-\hline
+\\\addlinespace
+\bottomrule
 \end{longtable}
 
 \emph{Intended audience}
